main mark-up and text + images and icons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minders'23 Orientation</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="intro">
+        <img
+          class="vertical-logo"
+          src="./images/vertical-logo.png"
+          alt="Minders Logo"
+        />
+        <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
+      </section>
+      <section class="about-us">
+        <img class="top-wave" src="./images/wave.png" alt="Top Wave">
+        <h1 class="about-us-heading">About Us</h1>
+        <p class="about-us-desc">
+          Minders is a student activity founded in 2014 by "Dr. Mohamed Bilal",
+          Dean of the Faculty of Computers and Artificial Intelligence at Helwan
+          University. It is present in various universities like Helwan
+          University, Cairo University, the Egyptian Chinese University, as well
+          as the Misr university for science and technology and it is still
+          expanding to more universities.
+        </p>
+        <div class="our-vision">
+          <h2 class="our-vision-heading">Our Vision</h2>
+          <p class="our-vision-desc">
+            Young entrepreneurs create a bright future and thriving economy.
+          </p>
+        </div>
+        <div class="our-mission">
+          <h2 class="our-mission-heading">Our Mission:</h2>
+          <div class="our-mission-desc">
+            <p>
+              We educate, inspire, and support young people to use
+              entrepreneurship to spread their ideas to the world, and achieve
+              their dreams.
+            </p>
+            <p>
+              Within seven years, Minders has been able to create free workshops
+              in more than 15 different fields, and organize more than 30
+              different events with the support of more than 100 companies, the
+              most famous of them are: "Cisco, Huawei, Microsoft, IBM, Xerox".
+            </p>
+            <p>
+              The most famous of these events is the “First step” event for
+              supporting the new students of the Computers and Artificial
+              Intelligence College, also the “Out of Loop” event for helping
+              entrepreneurs bring their ideas to life; believing in the idea of
+              the micro business.
+            </p>
+          </div>
+        </div>
+        <div class="our-values">
+          <h2 class="our-vision-heading">Our Values:</h2>
+          <ul>
+            <li>Creativity.</li>
+            <li>Passion.</li>
+            <li>Collaboration.</li>
+            <li>Commitment.</li>
+          </ul>
+        </div>
+        <img src="./images/lamp.png" alt="Lamp">
+      </section>
+      <section class="committees">
+        <h1 class="committees-heading">Committees</h1>
+        <div class="committee">
+          <h2 class="committee-name">CW (Content Writing):</h2>
+          <p class="committee-desc">
+            The committee of creativity; which is passionate about creating
+            unique articles for the Minders' magazine, amazing video and podcast
+            scripts, and various social media content.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">GD (Graphic Design):</h2>
+          <p class="committee-desc">
+            The committee that breaks the rules like artists creating beautiful
+            designs to stand out the Minders' identity.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">PV (Photography and Video Production):</h2>
+          <p class="committee-desc">
+            The eye of Minders, which is responsible for documenting its
+            journey.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">SM (Social Media):</h2>
+          <p class="committee-desc">
+            The committee whose role is to boost the Minders’ presence by
+            building smart strategies and managing the different platforms.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">PR (Public Relations):</h2>
+          <p class="committee-desc">
+            The committee whose role is to make incredible deals and
+            partnerships as well as bring great speakers to Minders' events.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">HR (Human Resources):</h2>
+          <p class="committee-desc">
+            The committee which is responsible for evaluating the members and
+            ensuring that the Minders' internal affairs are intact.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">QM (Quality Management):</h2>
+          <p class="committee-desc">
+            The committee that is responsible for managing the quality of tasks
+            and evaluating them.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">FR (Fundraising):</h2>
+          <p class="committee-desc">
+            The committee of money as it makes a financial plan and deals.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">OC (Organizing Committee):</h2>
+          <p class="committee-desc">
+            The committee that organizes the outings and events for Minders and
+            is also responsible for the decorations and materials.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">Front-End Committee:</h2>
+          <p class="committee-desc">
+            The committee which controls the website's design; they manage the
+            website's user interface.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">Back-End Committee:</h2>
+          <p class="committee-desc">
+            The committee which is responsible for the website from behind the
+            scenes; they supply the database and maintain and develop the logic
+            behind Minders' website.
+          </p>
+        </div>
+        <div class="committee">
+          <h2 class="committee-name">AC (Academic Committee):</h2>
+          <p class="committee-desc">
+            The committee whose role is to provide Minders’ workshops in
+            different fields and summarize the contents of the courses of the
+            faculties of computer science for the students.
+          </p>
+        </div>
+      </section>
+      <section class="article" dir="rtl" lang="ar">
+        <h1 class="article-title">
+            يقولون عني "حالم"
+        </h1>
+        <div class="article-content">
+            <p>
+                في الكثير من الليالي شعرت بالوحدة لأنني لم أجد من يستوعب أحلامي، قالوا عنها خيالات، وقالوا عني "حالم" لذا في عمق روحي تساءلت: "إن لم أحارب لأجل أحلامي وما أطمح له لأجل من سأحارب؟"
+            </p>
+            <p>
+                لمن يقرأ هذا الآن: مرحبًا اسمي "سراج" عمري ألف حلم، ألف هزيمة وانكسار، وألف نجاح ووصول وفخر. اسمي "سراج" أنا محاربٌ حالم؛ حين أحلم ينبت لي جناحان لا حدود تعوقهما. لا أعترف بالخوف، ولكني متصالح مع لحظات اليأس والتعب والحيرة مهما طالت؛ لأن في عمق قلبي بوصلة تُدعى "أحلامي" تؤنسني وترشدني و تدفعني للأمام رغم مشقة السبيل. وهنا اليوم في رحاب هذا المكان المدعو "Minders" صار لي بعض الرفاق يشجعونني ويشاركونني سبيل السعي رغم اختلاف أحلامنا.
+            </p>
+            <p>
+                في المستقبل أود أن أكون فخوراً بكل ما سعيت لتحقيقه، وحين أُسْأَلُ عن عمري ستكون إجابتي عدد أحلامي ومرات سعيي، وكذلك عدد الأيام التي فرحت فيها ملء قلبي خلال رحلتي.
+            </p>
+            <p>
+                اسمي سراج، وممتن لنفسي ولرفاق الطريق.. فماذا عنك؟
+            </p>
+        </div>
+      </section>
+      <section class="final">
+        <img src="./images/final-section-art.png" alt="" class="final-art">
+        <img class="bottom-wave" src="./images/wave.png" alt="Bottom Wave">
+      </section>
+
+    </main>
+  </body>
 </html>
