--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>Minders'23 Orientation</title>
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -11,6 +12,7 @@
   <body>
     <main>
       <section class="intro">
+        <img class="top-wave" src="./images/wave.png" alt="Top Wave" />
         <img
           class="vertical-logo"
           src="./images/vertical-logo.png"
@@ -19,16 +21,20 @@
         <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
       </section>
       <section class="about-us">
-        <img class="top-wave" src="./images/wave.png" alt="Top Wave">
         <h1 class="about-us-heading">About Us</h1>
-        <p class="about-us-desc">
-          Minders is a student activity founded in 2014 by "Dr. Mohamed Bilal",
-          Dean of the Faculty of Computers and Artificial Intelligence at Helwan
-          University. It is present in various universities like Helwan
-          University, Cairo University, the Egyptian Chinese University, as well
-          as the Misr university for science and technology and it is still
-          expanding to more universities.
-        </p>
+        <div class="about-us-desc">
+            <p>
+                Minders is a student activity founded in 2014 by "Dr. Mohamed Bilal",
+                Dean of the Faculty of Computers and Artificial Intelligence at Helwan
+                University.
+            </p>
+            <p>
+                It is present in various universities like Helwan
+                University, Cairo University, the Egyptian Chinese University, as well
+                as the Misr university for science and technology and it is still
+                expanding to more universities.
+            </p>
+        </div>
         <div class="our-vision">
           <h2 class="our-vision-heading">Our Vision</h2>
           <p class="our-vision-desc">
@@ -67,7 +73,7 @@
             <li>Commitment.</li>
           </ul>
         </div>
-        <img src="./images/lamp.png" alt="Lamp">
+        <img class="lamp" src="./images/lamp.png" alt="Lamp" />
       </section>
       <section class="committees">
         <h1 class="committees-heading">Committees</h1>
@@ -159,29 +165,34 @@
         </div>
       </section>
       <section class="article" dir="rtl" lang="ar">
-        <h1 class="article-title">
-            يقولون عني "حالم"
-        </h1>
+        <h1 class="article-title">يقولون عني "حالم"</h1>
         <div class="article-content">
-            <p>
-                في الكثير من الليالي شعرت بالوحدة لأنني لم أجد من يستوعب أحلامي، قالوا عنها خيالات، وقالوا عني "حالم" لذا في عمق روحي تساءلت: "إن لم أحارب لأجل أحلامي وما أطمح له لأجل من سأحارب؟"
-            </p>
-            <p>
-                لمن يقرأ هذا الآن: مرحبًا اسمي "سراج" عمري ألف حلم، ألف هزيمة وانكسار، وألف نجاح ووصول وفخر. اسمي "سراج" أنا محاربٌ حالم؛ حين أحلم ينبت لي جناحان لا حدود تعوقهما. لا أعترف بالخوف، ولكني متصالح مع لحظات اليأس والتعب والحيرة مهما طالت؛ لأن في عمق قلبي بوصلة تُدعى "أحلامي" تؤنسني وترشدني و تدفعني للأمام رغم مشقة السبيل. وهنا اليوم في رحاب هذا المكان المدعو "Minders" صار لي بعض الرفاق يشجعونني ويشاركونني سبيل السعي رغم اختلاف أحلامنا.
-            </p>
-            <p>
-                في المستقبل أود أن أكون فخوراً بكل ما سعيت لتحقيقه، وحين أُسْأَلُ عن عمري ستكون إجابتي عدد أحلامي ومرات سعيي، وكذلك عدد الأيام التي فرحت فيها ملء قلبي خلال رحلتي.
-            </p>
-            <p>
-                اسمي سراج، وممتن لنفسي ولرفاق الطريق.. فماذا عنك؟
-            </p>
+          <p>
+            في الكثير من الليالي شعرت بالوحدة لأنني لم أجد من يستوعب أحلامي،
+            قالوا عنها خيالات، وقالوا عني "حالم" لذا في عمق روحي تساءلت: "إن لم
+            أحارب لأجل أحلامي وما أطمح له لأجل من سأحارب؟"
+          </p>
+          <p>
+            لمن يقرأ هذا الآن: مرحبًا اسمي "سراج" عمري ألف حلم، ألف هزيمة
+            وانكسار، وألف نجاح ووصول وفخر. اسمي "سراج" أنا محاربٌ حالم؛ حين أحلم
+            ينبت لي جناحان لا حدود تعوقهما. لا أعترف بالخوف، ولكني متصالح مع
+            لحظات اليأس والتعب والحيرة مهما طالت؛ لأن في عمق قلبي بوصلة تُدعى
+            "أحلامي" تؤنسني وترشدني و تدفعني للأمام رغم مشقة السبيل. وهنا اليوم
+            في رحاب هذا المكان المدعو "Minders" صار لي بعض الرفاق يشجعونني
+            ويشاركونني سبيل السعي رغم اختلاف أحلامنا.
+          </p>
+          <p>
+            في المستقبل أود أن أكون فخوراً بكل ما سعيت لتحقيقه، وحين أُسْأَلُ عن
+            عمري ستكون إجابتي عدد أحلامي ومرات سعيي، وكذلك عدد الأيام التي فرحت
+            فيها ملء قلبي خلال رحلتي.
+          </p>
+          <p>اسمي سراج، وممتن لنفسي ولرفاق الطريق.. فماذا عنك؟</p>
         </div>
       </section>
       <section class="final">
-        <img src="./images/final-section-art.png" alt="" class="final-art">
-        <img class="bottom-wave" src="./images/wave.png" alt="Bottom Wave">
+        <img src="./images/final-section-art.png" alt="" class="final-art" />
+        <img class="bottom-wave" src="./images/wave.png" alt="Bottom Wave" />
       </section>
-
     </main>
   </body>
 </html>
