--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
         <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
       </section>
       <section class="about-us">
-        <h1 class="about-us-heading">About Us</h1>
-        <div class="about-us-desc">
+        <div>
+          <h1 class="about-us-heading">About Us</h1>
+          <div class="about-us-desc">
             <p>
-                Minders is a student activity founded in 2014 by "Dr. Mohamed Bilal",
-                Dean of the Faculty of Computers and Artificial Intelligence at Helwan
-                University.
+              Minders is a student activity founded in 2014 by "Dr. Mohamed
+              Bilal", Dean of the Faculty of Computers and Artificial
+              Intelligence at Helwan University.
             </p>
             <p>
-                It is present in various universities like Helwan
-                University, Cairo University, the Egyptian Chinese University, as well
-                as the Misr university for science and technology and it is still
-                expanding to more universities.
+              It is present in various universities like Helwan University,
+              Cairo University, the Egyptian Chinese University, as well as the
+              Misr university for science and technology and it is still
+              expanding to more universities.
             </p>
+          </div>
         </div>
         <div class="our-vision">
           <h2 class="our-vision-heading">Our Vision</h2>
