--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,26 +8,27 @@
     <title>Minders'23 Orientation</title>
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body>
+</head>
+<body>
     <main>
-      <section class="intro">
-        <img class="top-wave" src="./images/wave.png" alt="Top Wave" />
-        <img
-          class="vertical-logo"
-          src="./images/vertical-logo.png"
-          alt="Minders Logo"
-        />
-        <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
-      </section>
-      <section class="about-us">
-        <div>
-          <h1 class="about-us-heading">About Us</h1>
-          <div class="about-us-desc">
-            <p>
-              Minders is a student activity founded in 2014 by "Dr. Mohamed
-              Bilal", Dean of the Faculty of Computers and Artificial
-              Intelligence at Helwan University.
+        <section class="intro">
+            <img class="top-wave" src="./images/wave.png" alt="Top Wave" />
+            <img
+            class="vertical-logo"
+            src="./images/vertical-logo.png"
+            alt="Minders Logo"
+            />
+            <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
+            <a class="socials" href="#">Socials</a>
+        </section>
+        <section class="about-us">
+            <div>
+                <h1 class="about-us-heading">About Us</h1>
+                <div class="about-us-desc">
+                    <p>
+                        Minders is a student activity founded in 2014 by "Dr. Mohamed
+                        Bilal", Dean of the Faculty of Computers and Artificial
+                        Intelligence at Helwan University.
             </p>
             <p>
               It is present in various universities like Helwan University,
@@ -143,14 +144,14 @@
           </p>
         </div>
         <div class="committee">
-          <h2 class="committee-name">Front-End Committee:</h2>
+          <h2 class="committee-name">FE (Front-End Committee):</h2>
           <p class="committee-desc">
             The committee which controls the website's design; they manage the
             website's user interface.
           </p>
         </div>
         <div class="committee">
-          <h2 class="committee-name">Back-End Committee:</h2>
+          <h2 class="committee-name">BE (Back-End Committee):</h2>
           <p class="committee-desc">
             The committee which is responsible for the website from behind the
             scenes; they supply the database and maintain and develop the logic
@@ -167,6 +168,7 @@
         </div>
       </section>
       <section class="article" dir="rtl" lang="ar">
+        <img class="article-dots" src="./images/no2at-monzma.svg" alt="">
         <h1 class="article-title">يقولون عني "حالم"</h1>
         <div class="article-content">
           <p>
@@ -194,6 +196,7 @@
       <section class="final">
         <img src="./images/final-section-art.png" alt="" class="final-art" />
         <img class="bottom-wave" src="./images/wave.png" alt="Bottom Wave" />
+        <img class="socials-footer" src="./images/socials-footer.png" alt="">
       </section>
     </main>
   </body>
