added linktree and favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+    <link rel="icon" href="./images/favicon.png">
     <title>Minders'23 Orientation</title>
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -19,7 +20,7 @@
             alt="Minders Logo"
             />
             <img class="slogan" src="./images/slogan.png" alt="Minders Slogan" />
-            <a class="socials" href="#">Socials</a>
+            <a class="socials" href="https://linktr.ee/mindersorg">Socials</a>
         </section>
         <section class="about-us">
             <div>
